Updated navigation section with more discussion on selection of goal cost function params

--- a/capstone_bib.bib
+++ b/capstone_bib.bib
@@ -224,7 +224,33 @@
   organization={IEEE}
 }
 
-@misc{navfn_package,
-	title={navfn package }, 
-	howpublished={\url{http://wiki.ros.org/navfn}}, 
-	note={Accessed: 2017-10-24}}
+%@misc{navfn_package,
+%	title={navfn package }, 
+%	howpublished={\url{http://wiki.ros.org/navfn}}, 
+%	note={Accessed: 2017-10-24}}
+	
+%@misc{global_planner,
+%	title={global_planner package }, 
+%	howpublished={\url{http://wiki.ros.org/global planner}}, 
+%	note={Accessed: 2017-10-24}}
+
+%@misc{base_local_planner,
+%	title={base_local_planner package }, 
+%	howpublished={\url{http://wiki.ros.org/base_local_planner}}, 
+%	note={Accessed: 2017-10-24}}	
+
+%@misc{traj_sample_gen,
+%	title={Trajectory Sample Generator}, 
+%	howpublished={\url{http://docs.ros.org/kinetic/api/base_local_planner/html/classbase__local__planner_1_1TrajectorySampleGenerator.html}}, 
+%	note={Accessed: 2017-10-24}}		
+
+%@misc{gh_issue_25,
+%	title={Github Issue #25}, 
+%	howpublished={\url{https://github.com/ursa-drone/ursa-server/issues/25}}, 
+%	note={Accessed: 2017-10-24}}			
+
+%@misc{gh_issue_14,
+%	title={Github Issue #14}, 
+%	howpublished={\url{https://github.com/ursa-drone/ursa-server/issues/14}}, 
+%	note={Accessed: 2017-10-24}}			
+	
