Aded measurement data and some additional testing

--- a/capstone_bib.bib
+++ b/capstone_bib.bib
@@ -253,4 +253,10 @@
 %	title={Github Issue #14}, 
 %	howpublished={\url{https://github.com/ursa-drone/ursa-server/issues/14}}, 
 %	note={Accessed: 2017-10-24}}			
+
+@misc{erle_camera_case,
+	title={Erle-Brain2_CaseCamera.STL}, 
+	howpublished={\url{https://github.com/erlerobot/3d-support/blob/master/Erle-Brain\%202\%20Case/Erle-Brain2\_CaseCamera.STL}}, 
+	note={Accessed: 2017-10-24}}		
+
 	
